Delete restic repository from backend if Repository CRD is deleted (#438)
This PR fixes #416 

Task List:
- [x] Implement restic repo deletion while Repository CRD delete
- [x] Add test
- [x] Update doc
